--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
             <li><a href="reports.html">Reports</a></li>
         </ul>
     </nav>
+    <div class="container">
+        <h1>Welcome to Low Ray's Kendi Shop</h1>
+        <p>A shop where you can be yourself:/</p>
+    </div>
+    
 </body>
 </html>
