--- a/product_inventory.html
+++ b/product_inventory.html
@@ -8,3 +8,17 @@
     <link rel="stylesheet" href="inventory.css">
 </head>
 <body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="product_inventory.html">Product Inventory</a></li>
+            <li><a href="payment_accounting.html">Payment and Accounting</a></li>
+            <li><a href="logistics.html">Logistics</a></li>
+            <li><a href="customer_service.html">Customer Service</a></li>
+            <li><a href="reports.html">Reports</a></li>
+        </ul>
+    </nav>
+    
+    <div class="container">
+        <h1>Product Inventory</h1>
+        
