--- a/product_inventory.html
+++ b/product_inventory.html
@@ -29,5 +29,12 @@
                 <p class="price">$19.99</p>
                 <button onclick="addToCart('Chocolate Truffles', 19.99)">Add to Cart</button>
             </div>
-            
+            <div class="product">
+                <img src="product2.jpg" alt="Product 2">
+                <h2>Fruit Gummies</h2>
+                <p>Soft, chewy candies bursting with fruity flavors like strawberry, orange, lemon, and grape. Shaped like various fruits or animals</p>
+                <p class="price">$24.99</p>
+                <button onclick="addToCart('Fruit Gummies', 24.99)">Add to Cart</button>
+            </div>
+
         
