--- a/product_inventory.html
+++ b/product_inventory.html
@@ -36,5 +36,14 @@
                 <p class="price">$24.99</p>
                 <button onclick="addToCart('Fruit Gummies', 24.99)">Add to Cart</button>
             </div>
-
+            <div class="product">
+                <img src="product3.jpg" alt="Product 3">
+                <h2>Peppermint Patties</h2>
+                <p>Thin, round candies with a soft peppermint filling covered in a layer of smooth chocolate. Refreshing and minty.</p>
+                <p class="price">$24.99</p>
+                <button onclick="addToCart('Peppermint Patties', 24.99)">Add to Cart</button>
+            </div>
+            <!-- Add more products here -->
+        </div>
+    </div>
         
