added infos in inventory

--- a/product_inventory.html
+++ b/product_inventory.html
@@ -46,4 +46,10 @@
             <!-- Add more products here -->
         </div>
     </div>
-        
+            <!-- Include the app.js file -->
+    <script src="app.js"></script>
+    
+    <!-- Add cart count display -->
+    <div id="cartCount" class="cart-count"></div>
+</body>
+</html>
