added payment info

--- a/payment.html
+++ b/payment.html
@@ -35,3 +35,11 @@
                 <li><a href="reports.html">Reports</a></li>
             </ul>
         </nav>
+        <div class="container">
+            <h1>Payment and Accounting</h1>
+            
+            <div class="payment-section">
+                <h2>Payment</h2>
+                <p>Here you can manage payments for orders and transactions.</p>
+                <!-- Add payment-related content and functionality here -->
+            </div>
