added accounting info

--- a/payment.html
+++ b/payment.html
@@ -43,3 +43,13 @@
                 <p>Here you can manage payments for orders and transactions.</p>
                 <!-- Add payment-related content and functionality here -->
             </div>
+            <div class="accounting-section">
+                <h2>Accounting</h2>
+                <p>Manage your financial records and accounting tasks here.</p>
+                <!-- Add accounting-related content and functionality here -->
+            </div>
+        </div>
+    
+        <script src="app.js"></script>
+    </body>
+    </html>
