added shipping rates

--- a/logistics.html
+++ b/logistics.html
@@ -28,4 +28,30 @@
                 <li>International Shipping: 7-14 business days</li>
             </ul>
         </div>
+        <div class="shipping-rates">
+            <h2>Shipping Rates</h2>
+            <table>
+                <tr>
+                    <th>Shipping Method</th>
+                    <th>Rate</th>
+                </tr>
+                <tr>
+                    <td>Standard Shipping</td>
+                    <td>$5.99</td>
+                </tr>
+                <tr>
+                    <td>Express Shipping</td>
+                    <td>$12.99</td>
+                </tr>
+                <tr>
+                    <td>International Shipping</td>
+                    <td>$19.99</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+</html>
         
