added customer service container

--- a/customer_service.html
+++ b/customer_service.html
@@ -19,3 +19,18 @@
         <li><a href="reports.html">Reports</a></li>
     </ul>
 </nav>
+<div class="container">
+    <h1>Customer Service</h1>
+    <p>Welcome to our customer service page. We're here to help you with any inquiries or issues you may have.</p>
+    
+    <!-- Your customer service content goes here -->
+    <h2>Contact Information</h2>
+    <p>If you need assistance, feel free to contact us:</p>
+    <ul>
+        <li>Email: customerservice@lowrayskendishop.com</li>
+        <li>Phone: 0906-733-443</li>
+    </ul>
+</div>
+
+</body>
+</html>
