--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Low Ray's Kendi Shop</title>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="product_inventory.html">Product Inventory</a></li>
-            <li><a href="payment_accounting.html">Payment and Accounting</a></li>
-            <li><a href="logistics.html">Logistics</a></li>
-            <li><a href="customer_service.html">Customer Service</a></li>
-            <li><a href="reports.html">Reports</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <h1>Welcome to Low Ray's Kendi Shop</h1>
-        <p>A shop where you can be yourself:/</p>
-    </div>
-    
+
+<nav class="navbar">
+    <ul>
+        <li><a href="product_inventory.html">Product Inventory</a></li>
+        <li><a href="payment_accounting.html">Payment and Accounting</a></li>
+        <li><a href="logistics.html">Logistics</a></li>
+        <li><a href="customer_service.html">Customer Service</a></li>
+        <li><a href="reports.html">Reports</a></li>
+    </ul>
+</nav>
+
+<div class="container">
+    <h1>Welcome to Low Ray's Kendi Shop</h1>
+    <p>A shop where you can be yourself:/</p>
+</div>
+
 </body>
 </html>
