added an image for product1

--- a/product_inventory.html
+++ b/product_inventory.html
@@ -6,6 +6,7 @@
     <title>Product Inventory</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="inventory.css">
+    
 </head>
 <body>
     <nav class="navbar">
@@ -23,7 +24,7 @@
         <h1>Product Inventory</h1>
         <div class="product-list">
             <div class="product">
-                <img src="product1.jpg" alt="Product 1">
+                <img src="product.1.jpg" alt="Product 1">
                 <h2>Chocolate Truffles</h2>
                 <p>Smooth and creamy chocolate confections with a rich, indulgent taste. Often coated with cocoa powder or nuts for added texture.</p>
                 <p class="price">$19.99</p>
