added an image for product2

--- a/product_inventory.html
+++ b/product_inventory.html
@@ -31,7 +31,7 @@
                 <button onclick="addToCart('Chocolate Truffles', 19.99)">Add to Cart</button>
             </div>
             <div class="product">
-                <img src="product2.jpg" alt="Product 2">
+                <img src="product.2.jpg" alt="Product 2">
                 <h2>Fruit Gummies</h2>
                 <p>Soft, chewy candies bursting with fruity flavors like strawberry, orange, lemon, and grape. Shaped like various fruits or animals</p>
                 <p class="price">$24.99</p>
