added new header

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Low Ray's Kendi Shop</title>
-    <link rel="stylesheet" href="styles.css">
-    
+<meta charset="UTF-8">
+<title> Product Shop</title>
+<link rel="stylesheet" href="styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<link rel="stylesheet" href="use.fontawesome.com/releases/v5.15.4/css/all.css">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
-
+<div class="header">
+<div class="container">
+<div class="navbar">
+<div class="logo">
+<img src="https://tse2.mm.bing.net/th?id=OIP.7yaXURN2zUfsnqZDKm0YdQHaHa&pid=Api&P=0&h=180" width="125 px">
+</div>
 <nav class="navbar">
     <ul>
-        <li><a href="product_inventory.html">Product Inventory</a></li>
-        <li><a href="payment_accounting.html">Payment and Accounting</a></li>
+        <li><a href="index.html">Product Inventory</a></li>
+        <li><a href="payment.html">Payment and Accounting</a></li>
         <li><a href="logistics.html">Logistics</a></li>
         <li><a href="customer_service.html">Customer Service</a></li>
         <li><a href="reports.html">Reports</a></li>
     </ul>
 </nav>
-
-<div class="container">
-    <h1>Welcome to Low Ray's Kendi Shop</h1>
-    <p>A shop where you can be yourself:/</p>
+<img src="https://tse2.mm.bing.net/th?id=OIP.4mDv4lolzqtKDPHHU7ZasgHaHa&pid=Api&P=0&h=180" width="70px" height="70px">
 </div>
+<div class="row">
+<div class="col-2">
+<h1>Low Ray's Bag Shop<br>Trendy bags!</h1>
+<p>Affordable & suit to your liking <br>site for all your fashion needs</p>
 
-</body>
-</html>
+</div>
+</div>
+</div>
+</div>
