added new customer service.html

--- a/customer_service.html
+++ b/customer_service.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Service - Low Ray's Kendi Shop</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="service.css">
+<meta charset="UTF-8">
+<title> Product Shop</title>
+<link rel="stylesheet" href="customer_service.css">
+<link rel="stylesheet" href="styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<link rel="stylesheet" href="use.fontawesome.com/releases/v5.15.4/css/all.css">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
-
+<div class="header">
+<div class="container">
+<div class="navbar">
+<div class="logo">
+<img src="https://tse2.mm.bing.net/th?id=OIP.7yaXURN2zUfsnqZDKm0YdQHaHa&pid=Api&P=0&h=180" width="125 px">
+</div>
 <nav class="navbar">
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="product_inventory.html">Product Inventory</a></li>
-        <li><a href="payment_accounting.html">Payment and Accounting</a></li>
+        <li><a href="index.html">Product Inventory</a></li>
+        <li><a href="payment.html">Payment and Accounting</a></li>
         <li><a href="logistics.html">Logistics</a></li>
         <li><a href="customer_service.html">Customer Service</a></li>
         <li><a href="reports.html">Reports</a></li>
     </ul>
 </nav>
-<div class="container">
-    <h1>Customer Service</h1>
-    <p>Welcome to our customer service page. We're here to help you with any inquiries or issues you may have.</p>
-    
-    <!-- Your customer service content goes here -->
-    <h2>Contact Information</h2>
-    <p>If you need assistance, feel free to contact us:</p>
-    <ul>
-        <li>Email: customerservice@lowrayskendishop.com</li>
-        <li>Phone: 0906-733-443</li>
-    </ul>
+<img src="https://tse2.mm.bing.net/th?id=OIP.4mDv4lolzqtKDPHHU7ZasgHaHa&pid=Api&P=0&h=180" width="70px" height="70px">
 </div>
+<div class="row">
+<div class="col-2">
+<h1>Low Ray's Bag Shop<br>Trendy bags!</h1>
+<p>Affordable & suit to your liking <br>site for all your fashion needs</p>
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Customer Service Content -->
+<div class="customer-service">
+    <div class="container">
+        <h2>Contact Us</h2>
+        <p>If you have any questions or concerns, feel free to reach out to our customer service team.</p>
+        <div class="contact-form">
+            <form action="#" method="POST">
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Your Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <p>&copy; 2024 Low Ray's Bag Shop. All rights reserved.</p>
+    </div>
+</footer>
 
 </body>
 </html>
